--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -8,8 +8,45 @@ body{
 }
 
 h1,h2,h3,h4,h5{
-    font-weight: bolder;
-    color: #000;
+    font-weight: bold;
+    color: rgb(28, 25, 25);
+}
+.saibamais{
+    font-size: 46px;
+    color: #fff;;
+    font-weight:300;
+}
+.divButton{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    width: 150px;
+    height: 60px;
+    font-size: 20px;
+    border-radius: 10px;
+   border:#fff 2px solid;
+
+}
+.fourth{
+    width: 100% !important;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    border-color: #f1c40f;
+    border-radius: 10px;
+    color: #fff;
+    background-image: -webkit-linear-gradient(45deg, #f1c40f 50%, transparent 50%);
+    background-image: linear-gradient(45deg, #f1c40f 50%, transparent 50%);
+    background-position: 100%;
+    background-size: 400%;
+    -webkit-transition: background 300ms ease-in-out;
+    transition: background 500ms ease-out;
+
+}
+.fourth:hover {
+background-position: 0;
 }
 
 .wrapper{
@@ -23,11 +60,28 @@ main{
     background-color: #fff;
 }
 
+.caminhao{
+    width: 100px;
+    border-radius: 100px;
+}
+
 .container{
     width: 100%;
     max-width: 760px;
     margin: 0 auto;
     padding: 0 20px;
+    background-color: #f1c40f;
+}
+.container-infos{
+    width: 100%;
+    max-width: 760px;
+    margin: 0 auto;
+    padding: 0 20px;
+    background-color: aqua;
+}
+section.module.info{
+    padding: 40px 0;
+    background: rgb(19, 146, 34);
 }
 
 section.module p {
@@ -42,16 +96,18 @@ section.module:last-child{
 
 section.module.content{
     padding: 40px 0;
-    background: blanchedalmond;
+    background: #006F45;
+    height: 350px;
 }
+
 section.module.parallax{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 100vh !important ;
     width: 100%;
-    position: relative;
-    overflow: hidden;
+    position: static;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-attachment: fixed;
