--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -86,48 +86,56 @@ transition: all .45s;
     .navbar .nav_toggle {
         display: flex;
         width: 50px;
+        height: 50px;
         align-items: center;
         justify-content: center;
-        cursor:pointer;
-    }
-
-    .nav_toggle > .bar{
-        position:relative;
+        cursor: pointer;
+      }
+    
+      .nav_toggle > .bar {
+        position: relative;
         width: 32px;
-        height: 2px;
+        height: 1px;
         background-color: #000;
         transition: all 0.45s ease-in-out;
-    }
-
-    .nav_toggle .bar::before , 
-    .nav_toggle .bar::after{
-        content: "";
+      }
+    
+      .nav_toggle .bar::before,
+      .nav_toggle .bar::after {
+        content: '';
         position: absolute;
+        width: 32px;
         height: 2px;
         background-color: #000;
         border-radius: 2px;
         transition: all 0.45s ease-in-out;
-    }
-
-    .nav_toggle .bar::before {
+        z-index: -1; /* Movido para trás para ficar atrás do ícone principal */
+      }
+    
+      .nav_toggle .bar::before {
         width: 25px;
         transform: translateY(-8px);
         right: 0;
-    }
-    .nav_toggle .bar::after{
+      }
+    
+      .nav_toggle .bar::after {
         width: 32px;
         transform: translateY(8px);
-    }
-
-    .nav_toggle.open .bar{
+      }
+    
+      .nav_toggle.open .bar {
         transform: translateX(-40px);
         background: transparent;
-    }
-    .nav_toggle.open .bar::before{
+        z-index: -10;
+      }
+    
+      .nav_toggle.open .bar::before {
         width: 32px;
         transform: rotate(45deg) translate(26px, -26px);
-    }
-    .nav_toggle.open .bar::after{
+      }
+    
+      .nav_toggle.open .bar::after {
         transform: rotate(-45deg) translate(26px, 26px);
-    }
+      }
+    
 }
